# DrumGroovePro

./: CMakeLists.txt  README.md
Resources/Windows/: DrumGroovePro.manifest.in
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: DrumLibraryManager.cpp  DrumLibraryManager.h  FavoritesManager.cpp  FavoritesManager.h  MidiDissector.cpp  MidiDissector.h  MidiProcessor.cpp  MidiProcessor.h
Source/GUI/: MainComponent.cpp  MainComponent.h
Source/GUI/Components/: AboutDialog.cpp  AboutDialog.h  AddFolderDialog.cpp  AddFolderDialog.h  CustomFileBrowser.cpp  CustomFileBrowser.h  DrumPartsColumn.cpp  DrumPartsColumn.h  FilePathDisplay.cpp  FilePathDisplay.h  FolderPanel.cpp  FolderPanel.h  GrooveBrowser.cpp  GrooveBrowser.h  HeaderSection.cpp  HeaderSection.h  MultiTrackContainer.cpp  MultiTrackContainer.h  Timeline.cpp  Timeline.h  TimelineControls.cpp  TimelineControls.h  TimelineManager.cpp  TimelineManager.h  Track.cpp  Track.h  TrackHeader.cpp  TrackHeader.h
Source/GUI/LookAndFeel/: ColourPalette.h  DrumGrooveLookAndFeel.cpp  DrumGrooveLookAndFeel.h
Source/Utils/: LayoutUtils.h  OpenGLUtils.cpp  OpenGLUtils.h  TimelineUtils.h
